@@ -18,47 +18,98 @@
  *   59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.             *
  ***************************************************************************/
 
+#ifdef _WIN32
+#include <windows.h>
+#endif
+
 #include "PdfFontMetrics.h"
 
 #include "PdfVariant.h"
 #include <sstream>
 
+
 #define FIRST_READABLE 31
 
 namespace PoDoFo {
 
+#ifdef _WIN32
+	static bool GetWin32HostFont( const std::string& inFontName, char** outFontBuffer, unsigned int& outFontBufferLen );
+#endif
+
+
 PdfFontMetrics::PdfFontMetrics( FT_Library* pLibrary, const char* pszFilename )
-    : m_pLibrary( pLibrary ), m_sFilename( pszFilename )
+    : m_pLibrary( pLibrary ), m_sFilename( pszFilename ), m_pFontData( NULL	), m_nFontDataLen( 0 )
+{
+    m_face                = NULL;
+
+    // TODO: Handle errors here
+    FT_Error err = FT_New_Face( *pLibrary, pszFilename, 0, &m_face );
+#ifdef _WIN32
+    if ( err )
+    {	// try to load from the OS by name
+        char*	     fontBuf = NULL;
+        unsigned int fontBufLen = 0;
+        if ( GetWin32HostFont( m_sFilename, &fontBuf, fontBufLen ) ) 
+        {
+            err = FT_New_Memory_Face( *pLibrary, (unsigned char*)fontBuf, fontBufLen, 0, &m_face );
+            m_pFontData = fontBuf;
+            m_nFontDataLen = fontBufLen;
+        }
+    }
+#endif
+
+    InitFromFace();
+}
+
+PdfFontMetrics::PdfFontMetrics( FT_Library* pLibrary, const char* pBuffer, unsigned int nBufLen )
+	: m_pLibrary( pLibrary ), m_sFilename( "" ), m_pFontData( const_cast<char*>(pBuffer) ), m_nFontDataLen( nBufLen )
+{
+    m_face                = NULL;
+
+    // TODO: handle errors here
+    FT_Error	error = FT_New_Memory_Face( *pLibrary, (unsigned char*)pBuffer, nBufLen, 0, &m_face );
+    
+    InitFromFace();
+}
+
+PdfFontMetrics::~PdfFontMetrics()
+{
+    if ( m_face )
+        FT_Done_Face( m_face );
+    
+    if ( m_pFontData && m_nFontDataLen ) 
+    {
+        free( m_pFontData );
+        m_nFontDataLen = 0;
+    }
+}
+
+void PdfFontMetrics::InitFromFace()
 {
     m_nWeight             = 500;
     m_nItalicAngle        = 0;
     m_lLineSpacing        = 0;
     m_lUnderlineThickness = 0;
     m_lUnderlinePosition  = 0;
-    m_face                = NULL;
-
-    // TODO: Handle errors here
-    FT_New_Face( *pLibrary, pszFilename, 0, &m_face );
     
-    m_dAscent  = m_face->ascender  * 1000.0 / m_face->units_per_EM;
-    m_dDescent = m_face->descender * 1000.0 / m_face->units_per_EM;
-}
-
-PdfFontMetrics::~PdfFontMetrics()
-{
-    FT_Done_Face( m_face );
+    if ( m_face )
+    {	// better be, but just in case...
+        m_dAscent  = m_face->ascender  * 1000.0 / m_face->units_per_EM;
+        m_dDescent = m_face->descender * 1000.0 / m_face->units_per_EM;
+    }
 }
 
 const char* PdfFontMetrics::Fontname() const
 {
-    return FT_Get_Postscript_Name( m_face );
+    const char*	s = FT_Get_Postscript_Name( m_face );
+    return s ? s : "";
 }
 
 PdfError PdfFontMetrics::GetWidthArray( PdfVariant & var, unsigned int nFirst, unsigned int nLast ) const
 {
     PdfError      eCode;
     unsigned int  i;
-    FT_UInt       uiCharCode;
+ //   FT_UInt       uiCharCode;
     TVariantList  list;
 
     if( !m_face ) 
@@ -113,6 +164,9 @@ PdfError PdfFontMetrics::GetBoundingBox( std::string & rsBounds ) const
 
 std::string PdfFontMetrics::GetFilenameForFont( const char* pszFontname )
 {
+#ifdef _WIN32
+	return std::string( pszFontname );	// return the name...
+#else
     FcConfig* pConfig = FcInitLoadConfigAndFonts();
     std::string sPath = PdfFontMetrics::GetFilenameForFont( pConfig, pszFontname );
 
@@ -122,7 +176,90 @@ std::string PdfFontMetrics::GetFilenameForFont( const char* pszFontname )
 //    FcFini(void);
 
     return sPath;
+#endif
 }
+
+#ifdef _WIN32
+static bool GetDataFromLPFONT( LOGFONT* inFont, char** outFontBuffer, unsigned int& outFontBufferLen )
+{
+	HFONT 	hf;
+	HDC		hdc;
+
+	if ( ( hf = CreateFontIndirect( inFont ) ) == NULL )
+		return false;
+
+	if ( ( hdc = GetDC(0) ) == NULL ) {
+		DeleteObject(hf);
+		return false;
+	}
+
+	SelectObject(hdc, hf);
+
+	outFontBufferLen = GetFontData(hdc, 0, 0, 0, 0);
+
+	if (outFontBufferLen == GDI_ERROR) {
+		ReleaseDC(0, hdc);
+		DeleteObject(hf);
+		return false;
+	}
+
+	*outFontBuffer = (char *) malloc( outFontBufferLen );
+
+	if ( GetFontData( hdc, 0, 0, *outFontBuffer, (DWORD) outFontBufferLen ) == GDI_ERROR ) {
+		free( *outFontBuffer );
+		*outFontBuffer = NULL;
+		outFontBufferLen = 0;
+		ReleaseDC(0, hdc);
+		DeleteObject(hf);
+		return false;
+	}
+
+	ReleaseDC( 0, hdc );
+	DeleteObject( hf );
+
+	return true;
+}
+
+static bool GetWin32HostFont( const std::string& inFontName, char** outFontBuffer, unsigned int& outFontBufferLen )
+{
+	LOGFONT	lf;
+
+	std::string	localFName( inFontName );
+	bool	isBold = false,
+		isItalic = false;
+
+	// deal with BOLD and ITALIC versions of TimesNewRomanPS
+	if ( inFontName.find( "TimesNewRomanPS" ) != std::string::npos )	 {
+		isBold = ( inFontName.find( "Bold" ) != std::string::npos );
+		isItalic = ( inFontName.find( "Italic" ) != std::string::npos );
+		localFName = "Times New Roman";
+	}
+
+	lf.lfHeight			= 0;
+	lf.lfWidth			= 0;
+	lf.lfEscapement		= 0;
+	lf.lfOrientation	= 0;
+	lf.lfWeight			= isBold ? FW_BOLD : 0;
+	lf.lfItalic			= isItalic;
+	lf.lfUnderline		= 0;
+	lf.lfStrikeOut		= 0;
+	lf.lfCharSet		= DEFAULT_CHARSET;
+	lf.lfOutPrecision	= OUT_DEFAULT_PRECIS;
+	lf.lfClipPrecision	= CLIP_DEFAULT_PRECIS;
+	lf.lfQuality		= DEFAULT_QUALITY;
+	lf.lfPitchAndFamily = DEFAULT_PITCH | FF_DONTCARE;
+
+	if ( localFName.length() >= LF_FACESIZE) {
+		return false;
+	}
+
+	memset(&(lf.lfFaceName), 0, LF_FACESIZE);
+	strcpy( (char *)lf.lfFaceName, localFName.c_str() );
+
+	return GetDataFromLPFONT( &lf, outFontBuffer, outFontBufferLen );
+}
+
+#else
 
 std::string PdfFontMetrics::GetFilenameForFont( FcConfig* pConfig, const char* pszFontname )
 {
@@ -158,6 +295,7 @@ std::string PdfFontMetrics::GetFilenameForFont( FcConfig* pConfig, const char* p
     FcPatternDestroy( matched );
     return sPath;
 }
+#endif
 
 unsigned long PdfFontMetrics::CharWidth( char c ) const
 {
@@ -181,7 +319,7 @@ unsigned long PdfFontMetrics::StringWidth( const char* pszText, unsigned int nLe
         return lWidth;
 
     if( !nLength )
-        nLength = strlen( pszText );
+        nLength = (unsigned int)strlen( pszText );
 
     while( nLength-- && *pszText )
     {
